tests/type-check/good/obj-infer.arr

a = { b : 5, c : "hello" }
b :: Number = a.b
c :: String = a.c
