tests/type-check/bad/obj-check.arr

a :: { b :: Number, c :: String }  = { c : 5, b : "hello" }
b :: Number = a.b
c :: String = a.c
